--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,11 @@ android {
 }
 
 dependencies {
+    // nav component
     def nav_version = "2.4.0"
+    // room
     def room_version = "2.4.1"
+
 
     //retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -46,6 +49,14 @@ dependencies {
     // glide implementation
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    // dotsindicator
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+    // http interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+    // rxBinding
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+
+
     // appCompat
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
