--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -32,7 +33,7 @@ android {
 
 dependencies {
     // nav component
-    def nav_version = "2.4.0"
+    def nav_version = "2.4.1"
     // room
     def room_version = "2.4.1"
 
@@ -53,8 +54,9 @@ dependencies {
     implementation 'com.tbuonomo:dotsindicator:4.2'
     // http interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
-    // rxBinding
-    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+    // dagger-hilt
+    implementation "com.google.dagger:hilt-android:2.41"
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.41'
 
 
     // appCompat
